--- a/web/css/StylesMiguel.css
+++ b/web/css/StylesMiguel.css
@@ -1,3 +1,12 @@
-#salto{
-    display: block;
+#body{
+    background-image: url("../media/MP.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#Letrero{
+    color: white;
+    font-size: 100px;
+}
+#Letrero_2 {
+    color: white;
 }
